# Bachelorarbeit

./: .gitignore  README.md  README.mdxx  agent.py  crew.py  database.py  embedding.py  new-blog-post.md  pyproject.toml  query_data.py  requirements.txt  task.py  tools.py
db/: chroma.sqlite3
src/gemini_agents/: crew.py  main.py
