[project]
name = "gemini_agents"
version = "0.1.0"
description = "Gemini_Agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
gemini_agents = "gemini_agents.main:run"
run_crew = "gemini_agents.main:run"
train = "gemini_agents.main:train"
replay = "gemini_agents.main:replay"
test = "gemini_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
